objects/PC_Engagement_Program_Eletter__c.object
<CustomObject>
    <description>Junction table to associate an eLetter template to multiple programs.</description>
    <fields>
        <fullName>PC_Description__c</fullName>
        <inlineHelpText>Description of the Engagement Program eLetter Template</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Engagement_Program__c</fullName>
        <description>Lookup to the engagement program associated with the eLetter.</description>
        <label>Engagement Program</label>
        <referenceTo>PC_Engagement_Program__c</referenceTo>
        <relationshipLabel>Engagement Program eLetter</relationshipLabel>
        <relationshipName>Engagement_Program_eLetter</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PC_PreConfiguredEmailRecipients__c</fullName>
        <description>Pre configured email recipients for sending Adverse Event report via email and to show non-case role users as recipients for e-letter. Please add mail ids as comma separated values and with no spaces. Ex-abc@xyz.com,xyz@abc.com.

JSON format as shown below can also be provided when used for non-case role users as recipients for e-letter.
Ex. [{&quot;name&quot; : &quot;Linda&quot;, &quot;email&quot; : &quot;user1@test.com&quot;, &quot;fax&quot; : &quot;9878787678&quot;,&quot;role&quot;:&quot;Nurse&quot;},
{&quot;name&quot; : &quot;David&quot;, &quot;email&quot; : &quot;user2@test.com&quot;, &quot;fax&quot; : &quot;9897898789&quot;,&quot;role&quot;:&quot;Dentist&quot;}]</description>
        <inlineHelpText>Recipients for sending Adverse Event report via email and to show non-case role users as recipients for e-letter. Please add mail ids as comma separated values and with no spaces. Ex-abc@xyz.com,xyz@abc.com. See description for more details.</inlineHelpText>
        <label>Pre Configured Email Recipients</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_PreConfiguredSMSRecipients__c</fullName>
        <description>External recipients for sending SMS. Please add phone numbers in JSON format as shown in the example,

            Ex. [{&quot;name&quot; : &quot;Linda&quot;,&quot;Phone&quot; : &quot;+15671112230&quot;,&quot;role&quot;:&quot;Nurse&quot;},
            {&quot;name&quot; : &quot;David&quot;,&quot;Phone&quot; : &quot;+919897898789&quot;,&quot;role&quot;:&quot;Specialist&quot;}]</description>
        <inlineHelpText>External recipients for sending SMS .Please add phone numbers in JSON format as shown in the example,

            Ex. [{&quot;name&quot; : &quot;Linda&quot;,&quot;Phone&quot; : &quot;+15671112230&quot;,&quot;role&quot;:&quot;Nurse&quot;},
            {&quot;name&quot; : &quot;David&quot;,&quot;Phone&quot; : &quot;+919897898789&quot;,&quot;role&quot;:&quot;Specialist&quot;}]</inlineHelpText>
        <label>Pre Configured SMS Recipients</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_eLetter__c</fullName>
        <description>Lookup to the eLetter template associated with the engagement program.</description>
        <label>eLetter</label>
        <referenceTo>PC_eLetter__c</referenceTo>
        <relationshipLabel>Engagement Program eLetter</relationshipLabel>
        <relationshipName>Engagement_Program_eLetter</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Engagement Program eLetter</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PL-{0000000000}</displayFormat>
        <label>Engagement Program Eletter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Program eLetter</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>